# agentarium

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
agent-core/: Dockerfile  pyproject.toml
agent-core/src/: main.py
agent-core/src/adapters/: __init__.py  base.py  github_trending.py  hn_api.py  news_browser.py  rss.py
agent-core/src/core/: __init__.py  safety_guard.py  (+4 more)
agent-core/tests/: test_agent_loop.py  test_browse_source.py  test_build_llm_context.py  test_build_persona_context.py  test_compress_memory.py  test_evaluate_importance.py  test_forget_low_value.py  test_generate_daily_digest.py  test_generate_goal.py  test_generate_response.py  test_generate_topic_report.py  test_generate_trend_alert.py  test_human_behavior.py  test_llm_call.py  test_maintain_presence.py  test_parse_llm_output.py  test_patrol_scheduler.py  test_plan_task.py  test_post_x.py  test_presence_monitor.py  test_recall_character_state.py  test_recall_related.py  test_reflect.py  test_reply_x.py  test_resolve_prompt.py  test_safety_guard.py  test_search_x.py  test_select_skill.py  test_send_discord.py  test_skill_spec.py  test_skill_trace.py  test_store_character_state.py  test_store_procedural.py  test_update_character_state.py  test_update_emotion.py  test_update_emotional_state.py  test_verify_x_session.py  test_working_memory.py
dashboard/: Dockerfile  pyproject.toml
dashboard/poc/: monitor.html
dashboard/src/: main.py  qdrant_stats.py  scheduler_reader.py  watcher.py
dashboard/static/: app.js  index.html  style.css
dashboard/tests/: test_dashboard.py
(+178 files in other folders)
